fixing distortion

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -5,6 +5,7 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: "Kanit", sans-serif;
+    -webkit-overflow-scrolling: touch; /* Ensures smooth scrolling */
 }
 
 body {
@@ -89,11 +90,12 @@ a {
     position: fixed;
     inset: 0px;
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     background-color: rgba(195, 194, 194, 0.358);
     z-index: 10000000;
     padding: 50px 10px;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .lc-background.active {
@@ -243,9 +245,6 @@ a {
     margin: 30px auto 30px auto;
   }
 
-  .slick-slider {
-    /* height: 200px; */
-  }
 
   .slick-slide {
     position: relative;
@@ -256,9 +255,8 @@ a {
     #454b1b);
     overflow: hidden;
     border-radius: 10px;
-    /* min-height: 200px;
-    max-height: 200px; */
-    padding: 20px;
+    max-height: fit-content; 
+    padding: clamp(15px, 2vw, 20px);
   }
 
   /* Custom slick arrows */
@@ -327,6 +325,10 @@ a {
     font-size: 1.2rem;
     margin-bottom: 30px;
     color: var(--black);
+}
+
+.crypto-coin p, .asset-balance p {
+    font-size: clamp(1rem, 1.2vw, 1.5rem); /* Dynamic font size */
 }
 
 .ab-transact {
@@ -409,6 +411,7 @@ a {
     position: fixed;
     inset: 0px;
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     background-color: rgba(195, 194, 194, 0.358);
     padding: 50px 10px;
     z-index: 1000;
